# navi_stack

./: .gitignore  .gitmodules  README  navi.rosinstall  rosdep.yaml  stack.xml
blinkm/: CMakeLists.txt  blinkm.yaml  mainpage.dox  manifest.xml
blinkm/msg/: StatusLight.msg
blinkm/src/: BlinkM_funcs.h  avr_ros_user.cpp  main.cpp
camera_calibration/: calibrate_orientation.patch
camera_calibration/nodes/: cameracheck.py
camera_pose/: .hgtags
camera_pose/.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
cwiid/: .gitignore
cwiid/src/: cwiid-0.6.00.egg-info
diffdrive_calibrator/: CMakeLists.txt
diffdrive_calibrator/data/: calib_bag.sh  calib_view.vcg  calibrate.launch
diffdrive_calibrator/msg/: CalibData.msg
diffdrive_calibrator/src/: calibrator.cpp  data_collector.cpp
erratic_gazebo_plugins/src/: diffdrive_plugin.cpp
extrinsic_calibrator/: CMakeLists.txt  mainpage.dox  manifest.xml
extrinsic_calibrator/launch/: calib.launch
extrinsic_calibrator/nodes/: extrinsiccalibrator.py
extrinsic_calibrator/src/: laserPlaneFinder.cpp  laser_board_finder_node.cpp
jaus_pp/: .gitignore  CMakeLists.txt  JAUS++-2.110519-src.tar.gz.md5sum  Makefile  jaus_pp.patch  mainpage.dox  manifest.xml
joint_state_publisher/: joint_state_publisher
joy/: joy_node
line_detection/: CMakeLists.txt  manifest.xml  nodelet.xml
line_detection/launch/: navi_basic.launch
line_detection/src/: LineDetectionNode.cpp  LineDetectionNode.hpp  LineTrackerNode.cpp  LineTrackerNode.hpp  line_detection.cpp  line_tracker.cpp  sync.cpp  util.cpp  util.hpp
line_tracking/: CMakeLists.txt  manifest.xml  nodelet.xml
line_tracking/src/: line_fitter.cpp  line_fitter.hpp  line_mux.cpp  line_mux.hpp  line_tracker.cpp  line_tracker.hpp
navi_astar/: CMakeLists.txt  bgp_plugin.xml  mainpage.dox  manifest.xml
navi_astar/src/: astar.cpp
navi_bringup/: mainpage.dox  manifest.xml
navi_bringup/calibration/: mono_l.yaml  mono_m.yaml  mono_r.yaml  stereo_nl.yaml  stereo_nr.yaml  stereo_wl.yaml  stereo_wr.yaml
navi_bringup/config/: base_local_planner_params.yaml  camera.yaml  color_filter.yaml  compass.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  gps.yaml  jaguars.yaml  laser.yaml  local_costmap_params.yaml  map.yaml  waypoints.yaml  width_filter.yaml
navi_bringup/launch/: .basic.launch.swp  .general.launch.swp  .hardware.launch.swp  basic.launch  calibrate_extrinsics.launch  calibrate_mono.launch  calibrate_stereo.launch  camera.launch  (+24 more)
navi_calibration/: mainpage.dox  manifest.xml
navi_cfg/: 80-navi.rules  gps_programming  gpsd  mainpage.dox  manifest.xml  network_hosts
navi_driver/: diff_config.yaml  mainpage.dox  manifest.xml
navi_driver/src/motor_driver/: CMakeLists.txt  Encoder.cpp  Encoder.h  PDMotorController.cpp  PDMotorController.h  README  avr_ros_user.cpp  encoder_setup.h  main.cpp  motor_shb.c  motor_shb.h  motorcontrol.cpp  motorcontrol.h  pd_setup.h  robot.cpp  robot.h
navi_driver/src/motor_driver/arduino/: HardwareSerial.cpp  HardwareSerial.h  Tone.cpp  WInterrupts.c  WProgram.h  pins_arduino.c  pins_arduino.h  wiring.c  wiring.h  wiring_analog.c  wiring_digital.c  wiring_private.h
navi_driver/src/motor_driver/cmake_scripts/: arduino.cmake  arduino_diecimila.cmake
navi_executive/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  test.coords
navi_jackal/: .gitignore  CMakeLists.txt  Makefile  manifest.xml
navi_jackal_arduino/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
navi_jackal_msgs/: .gitignore  mainpage.dox
navi_jaus/: CMakeLists.txt  mainpage.dox  manifest.xml
navi_line/: CMakeLists.txt  mainpage.dox  manifest.xml
navi_mask/: CMakeLists.txt  mainpage.dox  manifest.xml
navi_model/: mainpage.dox  manifest.xml  object.urdf
navi_monitor/: mainpage.dox  manifest.xml
navi_mux/: CMakeLists.txt  mainpage.dox  manifest.xml
navi_navigation/: mainpage.dox  manifest.xml
navi_robot/: mainpage.dox  manifest.xml
navi_simulation/: mainpage.dox  manifest.xml
navi_slam/: gmapping.launch  mainpage.dox  manifest.xml
navi_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
navi_test/: mainpage.dox  manifest.xml
navi_web/: mainpage.dox  manifest.xml  navi_web.db  web.launch
navi_white/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
novatel_gps/: mainpage.dox  manifest.xml
ntcan_bridge/: mainpage.dox  manifest.xml
opencv2/: .gitignore  Makefile  manifest.xml
robot_cfg/: 80-navi.rules
robot_encoders/: CMakeLists.txt  mainpage.dox  manifest.xml
rosjs/: ros.js  ros.min.js  rosdb.js
stereo_eval/: mainpage.dox  manifest.xml
stereo_gpu/: CMakeLists.txt  mainpage.dox  manifest.xml
stereo_gpu/.svn/: all-wcprops  entries
stereo_gpu/.svn/text-base/: ReadMe.txt.svn-base
stereo_gpu/include/.svn/: all-wcprops  entries
stereo_gpu/include/stereo_gpu/: devmem2d.hpp
stereo_gpu/include/stereo_gpu/.svn/: all-wcprops  entries
stereo_gpu/include/stereo_gpu/.svn/text-base/: exports.hpp.svn-base  stereo_gpu.hpp.svn-base
stereo_gpu/src/: safe_call.hpp
stereo_gpu/src/.svn/: all-wcprops  entries
stereo_gpu/src/.svn/text-base/: stereo_gpu.cpp.svn-base  stereobm.cu.svn-base
stereo_gpu/test/.svn/: all-wcprops  entries
stereo_gpu/test/.svn/text-base/: main.cpp.svn-base
stereo_image_proc/: .gitignore
stereo_image_proc_gpu/: .gitignore  CMakeLists.txt  manifest.xml
stereo_mux/: CMakeLists.txt  manifest.xml
stereo_od/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml
stereo_plane/: .gitignore  CMakeLists.txt  debug.launch  mainpage.dox  manifest.xml  nodelet.xml
stereo_switcher/: CMakeLists.txt  manifest.xml
white_filter/: CMakeLists.txt  manifest.xml  nodelet.xml
(+1255 files in other folders)
